--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>RoboTech 開發者控制面板 | Preview</title>
+    <title>RoboTech DashBoard | Preview</title>
 </head>
 
 <body>
     <div class="sidebar">
         <ul class="side-menu">
-            <li><a href="#"><i class='bx bxs-dashboard'></i>控制面板</a></li>
+            <li><a href="./dashboard.html"><i class='bx bxs-dashboard'></i>控制面板</a></li>
             <li><a href="#"><i class='bx bx-store-alt'></i>商店</a></li>
             <li class="active"><a href="#"><i class='bx bx-analyse'></i>分析</a></li>
             <li><a href="#"><i class='bx bx-message-square-dots'></i>票務</a></li>
@@ -98,51 +98,6 @@
                     </span>
                 </li>
             </ul>
-
-            <div class="bottom-data">
-                <div class="orders">
-                    <div class="header">
-                        <i class='bx bx-receipt'></i>
-                        <h3>最近訂單</h3>
-                        <i class='bx bx-filter'></i>
-                        <i class='bx bx-search'></i>
-                    </div>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>使用者</th>
-                                <th>訂單資訊</th>
-                                <th>狀態</th>
-                            </tr>
-                        </thead>
-                    </table>
-                </div>
-
-                <div class="reminders">
-                    <div class="header">
-                        <i class='bx bx-note'></i>
-                        <h3>提醒事項</h3>
-                        <i class='bx bx-filter'></i>
-                        <i class='bx bx-plus'></i>
-                    </div>
-                    <ul class="task-list">
-                        <li class="completed">
-                            <div class="task-title">
-                                <i class='bx bx-check-circle'></i>
-                                <p>開始內部會議</p>
-                            </div>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                        <li class="completed">
-                            <div class="task-title">
-                                <i class='bx bx-check-circle'></i>
-                                <p>分析我們的網站</p>
-                            </div>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </main>
     </div>
     <script src="index.js"></script>
