--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>開發中的網頁 | 清單</title>
 </head>
 <body>
-    <a href="./Dashboard/index.html">開發者控制面板 | Preview</a>
+    <p><a href="./Dashboard/index.html">Developer DashBoard | Preview</a></p>
+    <p><a href="./Wikipedia_Searcher/index.html">Wikipedia Searcher | Preview</a></p>
 </body>
 </html>
