--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <p><a href="./Dashboard/index.html">Developer DashBoard | Preview</a></p>
-    <p><a href="./Wikipedia_Searcher/index.html">Wikipedia Searcher | Preview</a></p>
+    <p><a href="./Wikipedia_Searcher/index.html">中文維基搜尋 - RoboTech | Preview</a></p>
+    <p><a href="./Translator/index.html">RoboTech 翻譯 | Preview</a></p>
 </body>
 </html>
