--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -1,105 +1,120 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
-    <title>Developer DashBoard | Preview</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+    rel="stylesheet"
+  />
+  <link rel="icon" href="icon.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
+  <title>RoboTech DashBoard | Preview</title>
+  <style>
+  </style>
 </head>
 
+<!-- 左側選單 -->
 <body>
-    <div class="sidebar">
-        <ul class="side-menu">
-            <li><a href="./dashboard.html"><i class='bx bxs-dashboard'></i>控制面板</a></li>
-            <li><a href="#"><i class='bx bx-store-alt'></i>商店</a></li>
-            <li class="active"><a href="#"><i class='bx bx-analyse'></i>分析</a></li>
-            <li><a href="#"><i class='bx bx-message-square-dots'></i>票務</a></li>
-            <li><a href="#"><i class='bx bx-group'></i>使用者</a></li>
-            <li><a href="#"><i class='bx bx-cog'></i>設定</a></li>
-        </ul>
-        <ul class="side-menu">
-            <li>
-                <a href="#" class="logout">
-                    <i class='bx bx-log-out-circle'></i>
-                    登出
-                </a>
-            </li>
-        </ul>
-    </div>
+  <div class="sidebar">
+    <ul class="side-menu">
+      <li>
+        <a href="./dashboard.html"><i class="bx bxs-dashboard"></i>控制面板</a>
+      </li>
+      <li>
+        <a href="#"><i class="bx bx-show-alt"></i>商店</a>
+      </li>
+      <li class="active">
+        <a href="#"><i class="bx bx-analyse"></i>分析</a>
+      </li>
+      <li>
+        <a href="#"><i class="bx bx-message-square-dots"></i>票務</a>
+      </li>
+      <li>
+        <a href="#"><i class="bx bx-group"></i>使用者</a>
+      </li>
+      <li>
+        <a href="#"><i class="bx bx-cog"></i>設定</a>
+      </li>
+    </ul>
+    <ul class="side-menu">
+      <li>
+        <a href="#" class="logout">
+          <i class="bx bx-log-out-circle"></i>
+          登出
+        </a>
+      </li>
+    </ul>
+  </div>
 
-    <div class="content">
-        <nav>
-            <i class='bx bx-menu'></i>
-            <form action="#">
-                <div class="form-input">
-                    <input type="search" placeholder="搜尋...">
-                    <button class="search-btn" type="送出"><i class='bx bx-search'></i></button>
-                </div>
-            </form>
-            <input type="checkbox" id="theme-toggle" hidden>
-            <label for="theme-toggle" class="theme-toggle"></label>
-            <a href="#" class="notif">
-                <i class='bx bx-bell'></i>
-                <span class="count">87</span>
-            </a>
-        </nav>
+<!-- 搜尋 -->
+  <div class="content">
+    <nav>
+      <i class="bx bx-menu"></i>
+      <form action="#">
+        <div class="form-input">
+          <input type="search" placeholder="搜尋..." />
+          <button class="search-btn" type="送出">
+            <i class="bx bx-search"></i>
+          </button>
+        </div>
+      </form>
+      <input type="checkbox" id="theme-toggle" hidden />
+      <label for="theme-toggle" class="theme-toggle"></label>
+      <a href="#" class="notif">
+        <i class="bx bx-bell"></i>
+        <span class="count">87</span>
+      </a>
+    </nav>
 
-        <main>
-            <div class="header">
-                <div class="left">
-                    <h1>控制面板</h1>
-                    <ul class="breadcrumb">
-                        <li><a href="#">
-                                分析
-                            </a>
-                        </li>
-                        <li><a href="#" class="active">商店</a></li>
-                    </ul>
-                </div>
-                <a href="#" class="report">
-                    <i class='bx bx-cloud-download'></i>
-                    <span>下載 CSV 檔</span>
-                </a>
-            </div>
+<!-- 主要 -->
+    <main>
+      <div class="header">
+        <div class="left">
+          <h1>控制面板</h1>
+          <ul class="breadcrumb">
+            <li><a href="#"> 分析 </a></li>
+            <li><a href="#" class="active">商店</a></li>
+          </ul>
+        </div>
+        <a href="#" class="report">
+          <i class="bx bx-cloud-download"></i>
+          <span>下載 CSV 檔</span>
+        </a>
+      </div>
 
-            <ul class="insights">
-                <li>
-                    <i class='bx bx-calendar-check'></i>
-                    <span class="info">
-                        <h3>
-                            1,074
-                        </h3>
-                        <p>使用者</p>
-                    </span>
-                </li>
-                <li><i class='bx bx-show-alt'></i>
-                    <span class="info">
-                        <h3>
-                            3,944
-                        </h3>
-                        <p>試用</p>
-                    </span>
-                </li>
-                <li><i class='bx bx-line-chart'></i>
-                    <span class="info">
-                        <h3>
-                            14,721
-                        </h3>
-                        <p>搜尋次數</p>
-                    </span>
-                </li>
-                <li><i class='bx bx-dollar-circle'></i>
-                    <span class="info">
-                        <h3>
-                            $6,742
-                        </h3>
-                        <p>最高收入</p>
-                    </span>
-                </li>
-            </ul>
-        </main>
-    </div>
-    <script src="index.js"></script>
+      <ul class="insights">
+        <li>
+          <i class="bx bx-calendar-check"></i>
+          <span class="info">
+            <h3>1,074</h3>
+            <p>使用者</p>
+          </span>
+        </li>
+        <li>
+          <i class="bx bx-show-alt"></i>
+          <span class="info">
+            <h3>3,944</h3>
+            <p>試用</p>
+          </span>
+        </li>
+        <li>
+          <i class="bx bx-line-chart"></i>
+          <span class="info">
+            <h3>14,721</h3>
+            <p>搜尋次數</p>
+          </span>
+        </li>
+        <li>
+          <i class="bx bx-dollar-circle"></i>
+          <span class="info">
+            <h3>$6,742</h3>
+            <p>最高收入</p>
+          </span>
+        </li>
+      </ul>
+    </main>
+  </div>
+  <script src="index.js"></script>
 </body>
 </html>
